--- a/src/app/spots/spots-top/spots-top.component.html
+++ b/src/app/spots/spots-top/spots-top.component.html
@@ -14,7 +14,7 @@
 							<div class="row">
 								<div class="col-md-4 col-xs-4"><p>{{ spot.rating }} <span class="glyphicon glyphicon-star"></span></p></div>
 								<div class="col-md-4 col-xs-4"><p>{{ spot.beenHere}} <span class="glyphicon glyphicon-eye-open"></span></p></div>
-								<div class="col-md-4 col-xs-4"><p><img [src]="'app/assets/images/' + spot.category + '.png'" /></p></div>
+								<div class="col-md-4 col-xs-4"><p><img [src]="'assets/images/' + spot.category + '.png'" /></p></div>
 							</div>
 						</div>
 					</div>
@@ -34,17 +34,17 @@
 			<div class="container dotted">
 				<div class="row">
 					<div class="col-md-3 col-xs-3">
-						<img src="/assets/images/signup-icon.png" />
+						<img src="/testas/assets/images/signup-icon.png" />
 						<span>Sign up</span>
 					</div>
 					<img class="arrow col-md-1 col-xs-1" src="/testas/assets/images/arrow.png" />
 					<div class="col-md-3 col-xs-3">
-						<img src="/assets/images/find-icon.png" />
+						<img src="/testas/assets/images/find-icon.png" />
 						<span>Find a spot</span>
 					</div>
 					<img class="arrow col-md-1 col-xs-1" src="/testas/assets/images/arrow.png" />
 					<div class="col-md-3 col-xs-3">
-						<img src="/assets/images/spot-icon.png" />
+						<img src="/testas/assets/images/spot-icon.png" />
 						<span>Add the spot</span>
 					</div>
 				</div>
