--- a/src/app/spotters/spotters.component.html
+++ b/src/app/spotters/spotters.component.html
@@ -34,17 +34,17 @@
 			<div class="container dotted">
 				<div class="row">
 					<div class="col-md-3 col-xs-3">
-						<img src="app/assets/images/signup-icon.png" />
+						<img src="/testas/app/assets/images/signup-icon.png" />
 						<span>Sign up</span>
 					</div>
-					<img class="arrow col-md-1 col-xs-1" src="app/assets/images/arrow.png" />
+					<img class="arrow col-md-1 col-xs-1" src="/testas/app/assets/images/arrow.png" />
 					<div class="col-md-3 col-xs-3">
-						<img src="app/assets/images/find-icon.png" />
+						<img src="/testas/app/assets/images/find-icon.png" />
 						<span>Find a spot</span>
 					</div>
-					<img class="arrow col-md-1 col-xs-1" src="app/assets/images/arrow.png" />
+					<img class="arrow col-md-1 col-xs-1" src="/testas/app/assets/images/arrow.png" />
 					<div class="col-md-3 col-xs-3">
-						<img src="app/assets/images/spot-icon.png" />
+						<img src="/testas/app/assets/images/spot-icon.png" />
 						<span>Add the spot</span>
 					</div>
 				</div>
