--- a/src/app/spots/spots.component.html
+++ b/src/app/spots/spots.component.html
@@ -72,9 +72,9 @@
 					</div>
 				</div>
 			</div>
-			<!--<sebm-google-map *ngIf="particularSpots" [latitude]="lat" [longitude]="lng" [zoom]="6" [scrollwheel]="false">
+			<sebm-google-map *ngIf="particularSpots" [latitude]="lat" [longitude]="lng" [zoom]="6" [scrollwheel]="false">
 				<sebm-google-map-marker *ngFor="let spot of particularSpots" [latitude]="spot.latitude" [longitude]="spot.longitude"></sebm-google-map-marker>
-			</sebm-google-map>-->
+			</sebm-google-map>
 			<div *ngFor='let spot of particularSpots | spotFilter:listFilter' class="col-md-3">
 				<a (click)="gotoDetail(spot)">
 					<div class="img_overflow">
