--- a/src/app/spots/spot-detail/spot-detail.component.css
+++ b/src/app/spots/spot-detail/spot-detail.component.css
@@ -76,6 +76,8 @@ h3 {
 }
 .spot-images .image > img {
 	cursor: pointer;
+	max-width: 600px;
+	max-height: 600px;
 }
 .spot-images .image > img:hover {
 	opacity: 0.8;
