--- a/src/app/spots/spot-detail/spot-detail.component.html
+++ b/src/app/spots/spot-detail/spot-detail.component.html
@@ -19,9 +19,9 @@
 					<div class="geo_link">
 						<a href="#"><img src="/testas/assets/images/geo-link-icon.png" />{{ spot.city }}, {{ spot.country}}</a>
 					</div>
-          <sebm-google-map [latitude]="spot.latitude" [longitude]="spot.longitude" [zoom]="16" [scrollwheel]="false">
+          <!--<sebm-google-map [latitude]="spot.latitude" [longitude]="spot.longitude" [zoom]="16" [scrollwheel]="false">
     				<sebm-google-map-marker [latitude]="spot.latitude" [longitude]="spot.longitude"></sebm-google-map-marker>
-    			</sebm-google-map>
+    			</sebm-google-map>-->
 				</div>
 				<div class="col-md-3 sidebar">
           <div class="beenHere">
