--- a/src/app/spots/spots.component.html
+++ b/src/app/spots/spots.component.html
@@ -72,9 +72,16 @@
 					</div>
 				</div>
 			</div>
-			<sebm-google-map *ngIf="particularSpots" [latitude]="lat" [longitude]="lng" [zoom]="6" [scrollwheel]="false">
+			<google-map [center]="center" [zoom]="zoom" [disableDefaultUI]="disableDefaultUI" [disableDoubleClickZoom]="disableDoubleClickZoom"
+				[mapTypeId]="mapTypeId" [maxZoom]="maxZoom" [minZoom]="minZoom" [styles]="styles">
+				<!--this property is required: position-->
+				<google-map-marker *ngFor="let spot of particularSpots" [position]="spotPosition(spot.latitude, spot.longitude)" [title]="spot.title" [content]="spot.city + ', ' + spot.country">
+				</google-map-marker>
+			</google-map>
+			<!--<sebm-google-map *ngIf="particularSpots" [latitude]="lat" [longitude]="lng" [zoom]="6" [scrollwheel]="false">
 				<sebm-google-map-marker *ngFor="let spot of particularSpots" [latitude]="spot.latitude" [longitude]="spot.longitude"></sebm-google-map-marker>
-			</sebm-google-map>
+			</sebm-google-map>-->
+			<div id="map"></div>
 			<div *ngFor='let spot of particularSpots | spotFilter:listFilter' class="col-md-3">
 				<a (click)="gotoDetail(spot)">
 					<div class="img_overflow">
