--- a/src/app/spots/form.html
+++ b/src/app/spots/form.html
@@ -12,23 +12,15 @@
 							[(ngModel)]="spot.title" name="title">
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Įveskite vietos kategoriją" required
-							[(ngModel)]="spot.category" name="category">
-					</div>
-					<div class="form-group">
-						<textarea type="text" class="form-control" rows="4" placeholder="Įveskite vietos aprašymą" required
+						<textarea type="text" class="form-control" rows="4" placeholder="Įveskite vietos aprašymą"
 							[(ngModel)]="spot.description" name="description"></textarea>
 					</div>
 				</div>
 				<div class="col-md-6 section">
 					<h4>Vietovė</h4>
 					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Įveskite vietos šalį" required
-							[(ngModel)]="spot.country" name="country">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Įveskite vietos miestą" required
-							[(ngModel)]="spot.city" name="city">
+						<input type="text" class="form-control" placeholder="Įveskite vietos kategoriją" required
+							[(ngModel)]="spot.category" name="category">
 					</div>
 					<div class="row">
 						<div class="form-group col-md-6 col-xs-6">
