--- a/src/app/spots/spots.component.css
+++ b/src/app/spots/spots.component.css
@@ -1,6 +1,15 @@
 .sebm-google-map-container {
   	height: 300px;
 	top: 0;
+	color: #444;
+}
+.sebm-google-map-container .glyphicon {
+	font-size: 50px;
+	padding-top: 8px;
+}
+.sebm-google-map-container p{
+	margin: 0;
+	text-align: right;
 }
 h1 {
     font-weight: 700;
@@ -13,14 +22,14 @@ h2 {
     font-weight: 700;
     text-transform: uppercase;
     font-size: 40px;
-		color: #eee;
+	color: #eee;
     border: 4px solid #333;
     padding: 30px 10px;
-		text-align: center;
-		width: auto;
-		background: #404040;
-		margin-top: 0;
-		margin-bottom: 0;
+	text-align: center;
+	width: auto;
+	background: #404040;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 a {
 	text-decoration: none;
@@ -29,14 +38,7 @@ a {
 	border-radius: 0;
 	text-align: center;
 }
-.selected a .img_overflow > div  {
-	background: red!important;
-}
 
-.spots {
-    zoom: 1;
-    padding: 60px 0 30px;
-}	
 	.search-properties .filter {
 		padding: 10px;
 		width: 100%;
@@ -71,6 +73,7 @@ a {
 	.search-properties .sortProperty span {
 		margin-right: 15px;
 	}
+	/* Drop down */
 	.spots .spots-dropdown {
 		transition: 1s all;
 	}
@@ -124,9 +127,11 @@ a {
 		}
 		.dropdown-content label {
 			color: #203a4c;
+			width: 26%;
 		}
 		.dropdown-content input {
-			width: 300px;
+			width: 70%;
+			max-width: 430px;
 			border: 1px solid #203a4c;
 			padding: 5px;
 			margin-left: 10px;
@@ -135,7 +140,6 @@ a {
 		.spots .spots-dropdown .dropdown-content .list-group {
 			border-radius: 0;
 			border: 1px solid #203a4c;
-			height: 160px;
 			overflow-y: scroll;
 		}
 		.spots .spots-dropdown .dropdown-content .col-md-4 {
@@ -170,7 +174,7 @@ a {
 		.spots .spots-dropdown .dropdown-content .list-group .list-group-item:hover > a{
 			/*color: #fff;*/
 		}
-	.spots .col-md-3 {
+	.spots .spot {
 			overflow: hidden;
 			height: 350px;
 			max-height: 350px;
@@ -179,19 +183,19 @@ a {
 			margin: 0;
 			cursor: pointer;
 	}
-	.spots .col-md-3:hover {
+	.spots .spot:hover {
 			opacity: 0.8;
 	}
-	.spots .col-md-3:hover > a .post_excerpt {
+	.spots .spot:hover > a .post_excerpt {
 			top: 0;
 	}
-	.spots > .col-md-3 > a .img_overflow {
+	.spots > .spot > a .img_overflow {
 			width: 100%;
 			overflow: hidden;
 			max-height: 100%;
 			height: 100%;
 	}
-			.spots > .col-md-3 > a .img_overflow > div {
+			.spots > .spot > a .img_overflow > div {
 					height: 100%;
 					background: url('/testas/assets/images/spotter-background.jpg') no-repeat center center;
 					-webkit-background-size: cover;
@@ -201,18 +205,17 @@ a {
 	.post_excerpt {
 			transition: 1s all;
 			position: absolute;
-			top: -30;
 			left: 0;
 			width: 100%;
 			padding: 5px;
 			background: rgba(70, 70, 70, 1);
 	}
-	.spots > .col-md-3 > a .post_excerpt p {
+	.spots .spot .post_excerpt p {
 		margin: 0;
 		color: #eee;
 		text-align: center;
 	}
-	.spots > .col-md-3 > a .location {
+	.spots .spot .title {
 		position: absolute;
 		text-align: center;
 		bottom: 0;
@@ -222,7 +225,7 @@ a {
 		width: 100%;
 		text-transform: uppercase;
 		color: #EEE;
-    font-weight: 500;
+    	font-weight: 500;
 	}
 
 	.spotter {
@@ -290,11 +293,6 @@ a {
 		    margin: 0;
 		    float: left;
 		}
-		.spots {
-		    padding: 0!important;
-				margin: 0!important;
-				width: 100%;
-		}
 		.spots .col-md-3 > a .post_excerpt {
 				top: 0;
 		}
@@ -309,57 +307,82 @@ a {
 			max-height: auto;
 		}
 		.spots > .col-md-3 > a .img_overflow {
-				max-height: 250px;
-				height: 250px;
+			max-height: 250px;
+			height: 250px;
 		}
 	}
 	/* For smart phones */
-	@media (max-width: 767px) {
-		.spots {
-		    padding: 0!important;
+	@media (max-width: 766px) {
+		/* Drop down */
+		.dropdown-content input {
+			width: 100%;
 		}
-			.dropdown-content input {
-				width: 100%;
-			}
-			.dropdown-content input {
-				width: 80%;
-				margin-left: 0;
-			}
-				.spots .spots-dropdown .dropdown-content .col-md-4 {
-					border-left: 0;
-					border-top: 1px solid #203a4c;
-				}
-				.spots .spots-dropdown .dropdown-content .col-md-4 .list-group {
-					margin-top: 0px;
-				}
-				.spots .col-md-3 {
-			    width: 100%;
-			    margin: 0;
-			    height: auto;
-
-				}
-						.spots > .col-md-3 > a .img_overflow {
-								max-height: 200px;
-								height: 200px;
-						}
-						.spots .post_excerpt {
-							top: 0;
-							border-top: 0;
-						}
-						.spots .post_excerpt ~ .post_excerpt {
-							border-top: 1px solid #fff;
-						}
-						.spots .col-md-3 .post_excerpt .title {
-						    text-overflow: ellipsis;
-						    overflow: hidden;
-						    white-space: nowrap;
-						    font-size: 16px;
-						    max-height: none;
-						    height: auto;
-						}
-						.spots .col-md-3 .post_excerpt .container-fluid {
-						    margin-top: 10px!important;
-						}
+		.dropdown-content input {
+			width: 80%;
+			margin-left: 0;
+		}
+		.spots .spots-dropdown .dropdown-content .col-md-4 {
+			border-left: 0;
+			border-top: 1px solid #203a4c;
+		}
+		.spots .spots-dropdown .dropdown-content .col-md-4 .list-group {
+			margin-top: 0px;
+		}
+		/* Spot */
+		.spots .spot {
+			height: auto;
+		}
+		.spots .spot .title { 
+			line-height: 20px;
+			font-size: 16px;
+			position: relative;
+			display: inline-block;
+			text-align: left;
+			padding: 15px;
+			background: #f39c12;
+    		border-bottom: 1px solid #fff;
+			text-transform: none;
+		}
+		.spots .spot .img_overflow,
+		.spots .spot .post_excerpt {
+			display: none;
+		}
+		/* Selected spot */
+		.spots .spot.selected {
+			width: 100%;
+			margin: 0;
+			height: 200px;
+		}
+		.spots .spot.selected .img_overflow {
+			display: block;
+			max-height: 200px;
+			height: 200px;
+		}
+		.spots .spot.selected .post_excerpt {
+			display: block;
+			top: 0;
+			border-top: 0;
+		}
+		.spots .spot.selected .post_excerpt ~ .post_excerpt {
+			border-top: 1px solid #fff;
+		}
+		.spots .spot.selected .title {
+			text-overflow: ellipsis;
+			overflow: hidden;
+			white-space: nowrap;
+			font-size: 16px;
+			max-height: none;
+			height: auto;
+			position: absolute;
+			text-align: center;
+			padding: 5px;
+			text-transform: uppercase;
+			background: rgba(70, 70, 70, 1);
+		}
+		.spots .spot.selected .post_excerpt .container-fluid {
+			margin-top: 10px!important;
+		}
+		/* Spotter ad */
 		.spotter {
 			margin: 0;
 	    height: auto;
