--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
 		<li><a href="#" >Terms</a></li>
 		<li><a href="#" >Kontaktai</a></li>
 	</ul>
-	<div class="images-references">
+	<!--<div class="images-references">
 		<div class="flaticon">
 			Icons made by
 			<a href="http://www.freepik.com" target="_blank">Freepik</a>
@@ -18,5 +18,5 @@
 			<img src="/testas/assets/images/iconmonstr-logo.png">
 			<a href="http://iconmonstr.com/">iconmonstr</a>
 		</div>
-	</div>
+	</div>-->
 </footer>
