--- a/src/app/spots/spot-detail/spot-detail.component.html
+++ b/src/app/spots/spot-detail/spot-detail.component.html
@@ -14,12 +14,18 @@
     </div>
     <div class="container">
 			<div class="row spot-detail">
-				<div class="col-md-9">
+				<div class="col-md-9 main">
 					<h3 class="spot-title">{{ spot.title }}</h3>
 					<div class="geo_link">
 						<a href="#"><img src="/testas/assets/images/geo-link-icon.png" />{{ spot.city }}, {{ spot.country}}</a>
 					</div>
-          <sebm-google-map [latitude]="spot.latitude" [longitude]="spot.longitude" [zoom]="16" [scrollwheel]="false">
+          <sebm-google-map 
+            [latitude]="spot.latitude" 
+            [longitude]="spot.longitude" 
+            [zoom]="15" 
+            [scrollwheel]="false"
+            [mapDraggable]="false"
+            [disableDefaultUI]="true">
     				<sebm-google-map-marker [latitude]="spot.latitude" [longitude]="spot.longitude"></sebm-google-map-marker>
     			</sebm-google-map>
 				</div>
@@ -42,7 +48,7 @@
       </div>
 			<div class="row spot-images">
 				<h3>Galerija</h3>
-				<div *ngIf="spot.images.url">
+				<div *ngIf="spot.images">
           <div class="image">
             <img [src]="mainImage">
           </div>
@@ -50,7 +56,7 @@
           <!-- <img [src]="spot.images[0].url" [alt]="spot.images[1].title" [title]="spot.images[1].title" [style.width.px]="200">
           <img [src]="spot.images[1].url" [alt]="spot.images[2].title" [title]="spot.images[2].title" [style.width.px]="200"> -->
 				</div>
-        <div *ngIf="!spot.images.url" class="alert alert-info">
+        <div *ngIf="!spot.images" class="alert alert-info">
             Oh no! This spot has no pictures yet.
             <!-- <a href="#" class="alert-link">Click here to Login and add a picture</a> -->
             <!-- <a *ngIf="isModerator()" (click)="gotoUpdate()" class="alert-link">Click here to login and add a picture</a> -->
