--- a/src/app/spots/form.css
+++ b/src/app/spots/form.css
@@ -56,11 +56,27 @@ form {
   background: #f5f5f5;
 }
 form .section img {
-  height: 200px;
+  max-height: 400px;
+  max-width: 400px;
   color: #fff;
   text-align: center;
   line-height: 200px;
   margin-bottom: 20px;
+}
+.loading {
+  text-align: center;
+}
+.loading .loader {
+  position: absolute;
+  left: 50%;
+  margin-left: -60px;
+  margin-top: -250px;
+}
+.loading .alert {
+  margin-top: 350px;
+}
+.submitted {
+  margin-top: 20px;
 }
 @media (max-width: 768px) {
 	form .form-group.submit {
